Version 2.1.0 (2020-09-04)

  * Removed the ability to specify a token when using lumi-api, lumi-download,
    and lumi-upload.

  * Added a new command, `lumi-save-token`, as an interface to LuminosoClient's
    existing "save_token" functionality.

Version 2.0.1 (2020-07-10)

  * Added a new method, `wait_for_sentiment_build`, to allow users to wait for
    the new document-level sentiment build to finish instead of waiting for
    the main build process (which happens first).  `wait_for_build` remains as
    a method for users who want to know when non-sentiment API endpoints become
    ready to use.

  * Added a new timeout optional parameter to the v5 client to be able to pass
    it the the underlying requests object. Without setting it the request can
    hang forever if the server does not respond in a timely fashion. In case of
    a timeout the request will now return a LuminosoTimeoutError.

Version 2.0 (2019-07-03)

  * Changed the default client from the v4 client to the v5 client, as well as
    correspondingly swapping the README files to make the v5 client's README
    the main one.

  * Removed functionality from the v4 client specific to science endpoints
    (that is, any URL starting with "projects"), including:

    - The logic for setting the client's URL to the user's default account on
      login
    - The "upload" method for uploading documents to a project
    - The "wait_for" method for waiting for a project to build

  * Removed "documentation" method from v4 client.  This had been designed to
    download a text version of the API documentation, but for some time the API
    has been returning the documentation only as HTML.

  * Updated the default URLs, and URLs in documentation, to the new
    "daylight.luminoso.com".  Also added code in token authentication in both
    v4 and v5 clients to look for tokens for a domain with "analytics" in it
    if a domain with "daylight" was specified but no token was found, to help