@@ -6,6 +6,10 @@ Version 2.1.0 (2020-09-04)
   * Added a new command, `lumi-save-token`, as an interface to LuminosoClient's
     existing "save_token" functionality.
 
+  * Added the option to have the LuminosoClient create a new API token when
+    using the `save_token()` method, rather than requiring a token acquired
+    through the UI.
+
 Version 2.0.1 (2020-07-10)
 
   * Added a new method, `wait_for_sentiment_build`, to allow users to wait for
